--- a/trunk/TopicViewer/.classpath
+++ b/trunk/TopicViewer/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/VocabularyExtractor.jar"/>
 	<classpathentry kind="lib" path="lib/VXLReader.jar"/>
 	<classpathentry kind="lib" path="lib/IdentifierFilter.jar"/>
+	<classpathentry kind="lib" path="lib/IR.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
