Indexing and persistence of LSI matrices finished. Alterations on LSI indexing API

--- a/TopicViewer/project.properties
+++ b/TopicViewer/project.properties
@@ -1,2 +1,24 @@
-#Thu Sep 27 10:15:49 BRT 2012
+#Wed Oct 03 10:37:41 BRT 2012
+includeMethod=true
+tfVariant=RELATIVE
+stemming=yes
+includeInterface=true
+scoreCalculator=TFIDF
+includeJavadoc=true
+containerType=CLASS
+includeLocalVar=false
+camelcase=yes
+stopwords=yes
+includeSuperclass=true
+includeComment=true
+limitTermLength=0
+convertToLowerCase=yes
+english=yes
+includeAttribute=true
+distanceFunction=EUCLIDEAN
+includeClass=true
 workspace=C\:\\Users\\admin\\Documents\\mestrado
+lowRankValue=150
+includeParameter=true
+includeEnum=true
+underscore=yes
