--- a/trunk/TopicViewer/project.properties
+++ b/trunk/TopicViewer/project.properties
@@ -1,4 +1,4 @@
-#Wed Oct 03 10:37:41 BRT 2012
+#Fri Oct 05 11:55:26 BRT 2012
 includeMethod=true
 tfVariant=RELATIVE
 stemming=yes
@@ -17,7 +17,7 @@ english=yes
 includeAttribute=true
 distanceFunction=EUCLIDEAN
 includeClass=true
-workspace=C\:\\Users\\admin\\Documents\\mestrado
+workspace=E\:\\workspace\\mestrado
 lowRankValue=150
 includeParameter=true
 includeEnum=true
