Implementing clustering for the correlation matrix

--- a/TopicViewer/project.properties
+++ b/TopicViewer/project.properties
@@ -1,4 +1,4 @@
-#Fri Oct 05 11:55:26 BRT 2012
+#Mon Oct 08 08:22:46 BRT 2012
 includeMethod=true
 tfVariant=RELATIVE
 stemming=yes
@@ -17,8 +17,8 @@ english=yes
 includeAttribute=true
 distanceFunction=EUCLIDEAN
 includeClass=true
-workspace=E\:\\workspace\\mestrado
-lowRankValue=150
+workspace=C\:\\Users\\admin\\Documents\\mestrado
 includeParameter=true
+lowRankValue=150
 includeEnum=true
 underscore=yes
