--- a/trunk/TopicViewer/project.properties
+++ b/trunk/TopicViewer/project.properties
@@ -1,4 +1,4 @@
-#Mon Oct 08 08:22:46 BRT 2012
+#Tue Feb 19 12:34:10 BRT 2013
 includeMethod=true
 tfVariant=RELATIVE
 stemming=yes
@@ -10,15 +10,16 @@ includeLocalVar=false
 camelcase=yes
 stopwords=yes
 includeSuperclass=true
+stopwordsFile=stopword_list.txt
 includeComment=true
-limitTermLength=0
+limitTermLength=4
 convertToLowerCase=yes
 english=yes
 includeAttribute=true
 distanceFunction=EUCLIDEAN
 includeClass=true
 workspace=C\:\\Users\\admin\\Documents\\mestrado
+lowRankValue=0
 includeParameter=true
-lowRankValue=150
 includeEnum=true
 underscore=yes
