--- a/trunk/TopicViewer/project.properties
+++ b/trunk/TopicViewer/project.properties
@@ -1,25 +1,26 @@
-#Tue Feb 19 12:34:10 BRT 2013
+#Tue Apr 23 18:02:27 BRT 2013
 includeMethod=true
 tfVariant=RELATIVE
 stemming=yes
 includeInterface=true
 scoreCalculator=TFIDF
 includeJavadoc=true
+similarityThreshold=0.65D
 containerType=CLASS
 includeLocalVar=false
 camelcase=yes
 stopwords=yes
 includeSuperclass=true
-stopwordsFile=stopword_list.txt
 includeComment=true
+stopwordsFile=original_stopwordslist.txt
 limitTermLength=4
 convertToLowerCase=yes
 english=yes
+distanceFunction=COSINE
 includeAttribute=true
-distanceFunction=EUCLIDEAN
 includeClass=true
-workspace=C\:\\Users\\admin\\Documents\\mestrado
+workspace=F\:\\test23abr
 lowRankValue=0
-includeParameter=true
+includeParameter=false
 includeEnum=true
 underscore=yes
