--- a/TopicViewer/.classpath
+++ b/TopicViewer/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/colt.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/IdentifierFilter.jar"/>
 	<classpathentry kind="lib" path="lib/VocabularyExtractor.jar"/>
 	<classpathentry kind="lib" path="lib/VXLReader.jar"/>
-	<classpathentry kind="lib" path="lib/IR.jar"/>
 	<classpathentry kind="lib" path="lib/substance.jar"/>
+	<classpathentry kind="lib" path="lib/parallelcolt-0.9.4.jar"/>
+	<classpathentry kind="lib" path="lib/arpack-combo.jar"/>
+	<classpathentry kind="lib" path="lib/netlib-java.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
